OPS: use Java 11 for local builds